// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdeNavigation unit tests view tests renders the expected structure with all provided 1`] = `
Array [
  <div
    className=" ide-navigation"
    data-ui-id="IdeNavigation"
  >
    <SideNav
      addFocusListeners={false}
      addMouseListeners={false}
      aria-label="sample aria label to describe the nav"
      aria-labelledby="#myId"
      className="ide-navigation--nav-theme ide-navigation--nav-overrides "
      data-ui-id="IdeNavigation--left-nav"
      defaultExpanded={false}
      expanded={false}
      isChildOfHeader={true}
      isFixedNav={false}
      isPersistent={true}
      isRail={true}
    >
      <SideNavItems
        data-ui-id="IdeNavigation--left-nav-item-container"
      >
        <IdeSideNavMenu
          title="Sample menu"
        >
          <SideNavMenuItem
            href="javascript:void(0)"
          >
            Menu item one
          </SideNavMenuItem>
          <SideNavMenuItem
            href="javascript:void(0)"
          >
            Menu item two
          </SideNavMenuItem>
          <SideNavMenuItem
            href="javascript:void(0)"
          >
            Menu item three
          </SideNavMenuItem>
        </IdeSideNavMenu>
        <IdeSideNavMenu
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          title="Sample menu with icon"
        >
          <SideNavMenuItem
            href="javascript:void(0)"
          >
            Menu item one
          </SideNavMenuItem>
          <SideNavMenuItem
            href="javascript:void(0)"
          >
            Menu item two
          </SideNavMenuItem>
          <SideNavMenuItem
            href="javascript:void(0)"
          >
            Menu item three
          </SideNavMenuItem>
        </IdeSideNavMenu>
        <IdeSideNavLink
          href="javascript:void()"
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
        >
          Sample Link with Icon
        </IdeSideNavLink>
        <IdeSideNavLink
          href="javascript:void()"
        >
          Sample Link
        </IdeSideNavLink>
      </SideNavItems>
      <SideNavFooter
        assistiveText="Expand or collapse the navigation"
        className="ide-navigation--toggle"
        data-ui-id="IdeNavigation--left-nav-toggle"
        expanded={false}
        onToggle={[Function]}
      />
    </SideNav>
    <Content
      className="ide-navigation--content  "
      data-ui-id="IdeNavigation--content"
      tagName="main"
    />
  </div>,
]
`;

exports[`IdeNavigation unit tests view tests renders the expected structure with no props provided 1`] = `
Array [
  <div
    className=" ide-navigation"
    data-ui-id="IdeNavigation"
  >
    <SideNav
      addFocusListeners={false}
      addMouseListeners={false}
      aria-label="Example Aria Labeled"
      aria-labelledby="Example Aria Labeled by"
      className="ide-navigation--nav-theme ide-navigation--nav-overrides "
      data-ui-id="IdeNavigation--left-nav"
      defaultExpanded={false}
      expanded={false}
      isChildOfHeader={true}
      isFixedNav={false}
      isPersistent={true}
      isRail={true}
    >
      <SideNavItems
        data-ui-id="IdeNavigation--left-nav-item-container"
      />
      <SideNavFooter
        assistiveText="Click here to expand or collapse the navigation - change this for a pre translated string!"
        className="ide-navigation--toggle"
        data-ui-id="IdeNavigation--left-nav-toggle"
        expanded={false}
        onToggle={[Function]}
      />
    </SideNav>
    <Content
      className="ide-navigation--content  "
      data-ui-id="IdeNavigation--content"
      tagName="main"
    />
  </div>,
]
`;
